feat: add PUT endpoint for updating measurements and corresponding tests
